--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     }
 
                      const renderTopLevelMenu = (items) => {
-                        return `<nav class="hidden sm:flex items-center space-x-1 text-gray-600 dark:text-gray-300">
+                        return `<nav class="hidden sm:flex items-center space-x-1 text-sm text-gray-600 dark:text-gray-300">
                             ${items.map(item => `
                                 <div class="relative group">
                                     <a href="${item.url}" class="px-3 py-2 hover:text-blue-500 dark:hover:text-blue-400 flex items-center gap-2 rounded-md hover:bg-gray-100 dark:hover:bg-gray-800">
@@ -334,7 +334,7 @@
                         : `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>`;
 
                     return `
-                    <header class="flex justify-between items-center py-2 border-b border-gray-200 dark:border-gray-700 mb-8">
+                    <header class="flex justify-between items-center h-[62px] border-b border-gray-200 dark:border-gray-700 mb-8">
                         <div class="flex items-center gap-4">
                             <a href="#" class="text-xl font-bold text-gray-900 dark:text-gray-100 flex items-center gap-2">
                                 <svg class="w-8 h-8" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M512 64a448 448 0 1 1 0 896a448 448 0 0 1 0-896m0 832a384 384 0 0 0 0-768a384 384 0 0 0 0 768m-48-448a48 48 0 1 1 96 0a48 48 0 0 1-96 0m-128-64a48 48 0 1 1 96 0a48 48 0 0 1-96 0m256 0a48 48 0 1 1 96 0a48 48 0 0 1-96 0m-128 128a48 48 0 1 1 96 0a48 48 0 0 1-96 0"></path></svg>
@@ -539,4 +539,3 @@
     </script>
 </body>
 </html>
-
