--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 }
             },
             
-            // MODIFICATION 1: Added Carousel functionality
             initCarousel() {
                 const container = document.getElementById('carousel-container');
                 if (!container) return;
@@ -491,9 +490,7 @@
                 },
                 mainLayout: (content) => `<div class="flex-grow">${App.templates.header()}<main class="max-w-7xl mx-auto w-full p-4 sm:p-6 lg:p-8 flex flex-col lg:flex-row gap-8 lg:gap-12"><div class="w-full lg:w-3/4">${content}</div>${App.templates.sidebar()}</main></div>${App.templates.footer()}`,
                 
-                // MODIFICATION 1: New template for the carousel
                 carousel: () => {
-                    // 您可以在这里替换成您自己的图片链接
                     const images = [
                         'https://placehold.co/1200x230/3b82f6/ffffff?text=Carousel+Image+1',
                         'https://placehold.co/1200x230/ef4444/ffffff?text=Carousel+Image+2',
@@ -523,17 +520,44 @@
                     `;
                 },
 
-                // MODIFICATION 2: Homepage now shows carousel and a simple list of all posts
+                // MODIFICATION: Changed how homepage posts are rendered
                 homePage: (posts, title = "最新文章") => {
                     return `
                         ${App.templates.carousel()}
                         <h1 class="text-2xl font-bold mb-6">${title}</h1>
-                        <div class="space-y-8">
-                            ${posts.length > 0 ? posts.map(post => App.templates.postCard(post)).join('') : '<p>没有找到相关文章。</p>'}
+                        <div class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700">
+                            <div class="divide-y divide-gray-200 dark:divide-gray-700">
+                                ${posts.length > 0 ? posts.map(post => App.templates.postCard(post)).join('') : '<p class="p-6">没有找到相关文章。</p>'}
+                            </div>
                         </div>
                     `;
                 },
-                postCard: (post) => `<article class="bg-white dark:bg-gray-800 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 flex flex-col sm:flex-row overflow-hidden items-center"> <div class="relative w-full sm:w-2/5 lg:w-1/3 flex-shrink-0"><a href="#/post/${post.slug}" class="block"><img src="${post.imageUrl || 'https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image'}" alt="${post.title}" class="w-full h-48 sm:h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image';"></a><a href="#/category/${encodeURIComponent(post.category)}" class="absolute top-3 left-3 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-xs font-semibold hover:bg-opacity-70">${post.category}</a></div><div class="p-5 flex-grow flex flex-col justify-between self-stretch"><div><h2 class="text-xl font-bold mb-2"><a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}</a></h2><div class="text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div></div><div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-2"><span>${new Date(post.date).toLocaleDateString()}</span><div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div></div></div></article>`,
+                // MODIFICATION: postCard is now a list item, not a card
+                postCard: (post) => `
+                    <div class="p-6 flex flex-col sm:flex-row items-center">
+                        <div class="relative w-full sm:w-2/5 lg:w-1/3 flex-shrink-0">
+                            <a href="#/post/${post.slug}" class="block">
+                                <img src="${post.imageUrl || 'https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image'}" alt="${post.title}" class="w-full h-48 sm:h-full object-cover rounded-md" onerror="this.onerror=null;this.src='https://placehold.co/400x300/e2e8f0/cbd5e0?text=Image';">
+                            </a>
+                            <a href="#/category/${encodeURIComponent(post.category)}" class="absolute top-3 left-3 bg-black bg-opacity-50 text-white px-2 py-1 rounded text-xs font-semibold hover:bg-opacity-70">${post.category}</a>
+                        </div>
+                        <div class="pt-5 sm:pt-0 sm:pl-5 flex-grow flex flex-col justify-between self-stretch">
+                            <div>
+                                <h2 class="text-xl font-bold mb-2">
+                                    <a href="#/post/${post.slug}" class="hover:text-blue-600 dark:hover:text-blue-400">
+                                        ${post.isPinned ? '<span class="text-red-500 font-bold">[置顶]</span> ' : ''}${post.title}
+                                    </a>
+                                </h2>
+                                <div class="text-gray-600 dark:text-gray-400 leading-relaxed text-sm mb-4">${App.helpers.stripHtmlAndTruncate(post.content, 100)}</div>
+                            </div>
+                            <div class="flex justify-between items-center text-xs text-gray-500 dark:text-gray-400 mt-2">
+                                <span>${new Date(post.date).toLocaleDateString()}</span>
+                                <div class="flex items-center gap-1">
+                                    <i class="fas fa-eye"></i><span>${post.views || 0}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`,
                 postPage: (post) => { if (!post) return App.templates.notFoundPage(); const commentsHtml = App.templates.commentsSection(post.slug); const commentFormHtml = App.templates.commentForm(post.slug); return ` <article class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700"> <div class="flex items-center text-sm text-gray-500 dark:text-gray-400 mb-4"><a href="#/category/${encodeURIComponent(post.category)}" class="bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full text-xs font-semibold">${post.category}</a><span class="mx-2">&middot;</span><span>发布于 ${new Date(post.date).toLocaleDateString()}</span><span class="mx-2">&middot;</span><div class="flex items-center gap-1"><i class="fas fa-eye"></i><span>${post.views || 0}</span></div></div> <h1 class="text-3xl sm:text-4xl font-bold mb-6">${post.title}</h1> ${post.imageUrl ? `<img src="${post.imageUrl}" alt="${post.title}" class="w-full rounded-lg mb-8">` : ''} <div class="content-area">${post.content}</div> <div class="mt-8 pt-4 border-t dark:border-gray-700 flex flex-wrap gap-2">${ (post.tags && post.tags.length > 0) ? '<span class="font-semibold">标签:</span>' : '' }${ (post.tags || []).map(tag => `<a href="#/tag/${encodeURIComponent(tag)}" class="bg-gray-100 dark:bg-gray-700 text-sm px-3 py-1 rounded-md hover:bg-gray-200 dark:hover:bg-gray-600">${tag}</a>`).join('')}</div> </article> ${commentsHtml} ${commentFormHtml} `; },
                 commentForm: (slug) => `<div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 mt-8"><h3 class="text-xl font-semibold mb-4">发表评论</h3><form onsubmit="App.handleCommentSubmit(event, '${slug}')"><div class="mb-4"><label for="nickname" class="block text-sm font-medium mb-1">昵称</label><input type="text" id="nickname" name="nickname" required class="w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></div><div class="mb-4"><label for="content" class="block text-sm font-medium mb-1">评论内容</label><textarea id="content" name="content" rows="4" required class="w-full px-3 py-2 border rounded-md dark:bg-gray-700 dark:border-gray-600"></textarea></div><div class="text-right"><button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">提交</button></div></form></div>`,
                 commentsSection: (slug) => { const comments = App.state.comments[slug] || []; return ` <div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-lg shadow-sm border border-gray-200 dark:border-gray-700 mt-8"> <h3 class="text-xl font-semibold mb-4">评论 (${comments.length})</h3> <div class="space-y-6"> ${comments.length > 0 ? comments.map(c => `<div class="flex items-start gap-4"><div class="w-10 h-10 rounded-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center font-bold text-gray-500 dark:text-gray-400 text-lg flex-shrink-0">${c.nickname.charAt(0)}</div><div><div class="flex items-baseline gap-2"><p class="font-semibold">${c.nickname}</p><p class="text-xs text-gray-400">${new Date(c.date).toLocaleString()}</p></div><p class="mt-1">${c.content}</p></div></div>`).join('') : '<p class="text-gray-500 dark:text-gray-400">还没有评论。</p>'} </div> </div> `; },
